@@ -4,6 +4,7 @@ version 0.84.05
 	Using one push bracketing field in command line
 	Print out command line in debug mode
 	--settings
+	--dangerous no longer required for K-70
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
 	about/version code cleanup
